--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "eslint": "^9.10.0",
-    "globals": "^15.9.0",
-    "prisma": "^5.19.1"
+    "globals": "^15.9.0"
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
@@ -25,6 +24,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.19.1",
     "uuid": "^10.0.0"
   }
 }
