add cloudinary configuration

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,13 @@
 PORT=
 
+## DATABASE
 DATABASE_URL=
 
+## JWT
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
+
+## CLOUDINARY
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
