--- a/.env.development
+++ b/.env.development
@@ -12,3 +12,4 @@ CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_LISTENER_IMAGE_FOLDER=
+CLOUDINARY_ARTIST_IMAGE_FOLDER=
