--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watch",
     "start": "node .",
     "dev": "nodemon ."
   },
