implement album image upload on Add Album API

--- a/.env.development
+++ b/.env.development
@@ -13,3 +13,4 @@ CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_LISTENER_IMAGE_FOLDER=
 CLOUDINARY_ARTIST_IMAGE_FOLDER=
+CLOUDINARY_ALBUM_IMAGE_FOLDER=
